<resources>
  <string name="app_name">Criteo Pub SDK Demo</string>
  <string name="demo_app_title">Publisher SDK \nDemo App</string>
  <string name="sdk_version">3.5.0</string>
  <string name="sdk_version_label">Publisher SDK:</string>
  <string name="demo_app_version">3.5.0</string>
  <string name="demo_app_version_label">Demo App version:</string>
  <string name="criteo_logo_content_description">Criteo Logo</string>
  <string name="title_activity_standalone">Standalone</string>
  <string name="title_activity_splash">PubSDK</string>
  <string name="title_activity_dfp">Google DFP</string>
  <string name="title_activity_mediation">Mediation</string>
  <string name="title_activity_mopub">Mopub</string>
  <string name="title_activity_server_bidding">Server Bidding</string>

  <string name="btn_interstitial">Interstitial</string>
  <string name="btn_interstitial_ibv">Interstitial IBV</string>
  <string name="btn_banner">Banner</string>
  <string name="btn_google_dfp_with_version">Google DFP \n v4.5.1</string>
  <string name="btn_mediation">Mediation</string>
  <string name="btn_standalone">Standalone</string>
  <string name="btn_custom_native">Custom Native</string>
  <string name="btn_in_house_mediation">In-house Mediation</string>
  <string name="btn_mopub">Mopub</string>
  <string name="btn_mopub_mediation">Mopub-Mediation</string>
  <string name="btn_admob_mediation">AdMob-Mediation</string>
  <string name="btn_server_bidding">Server Bidding</string>
  <string name="btn_ccpa_consent_selector">CCPA Consent Selector</string>
  <string name="btn_tcf_consent_selector">TCF Consent Selector</string>
  <string name="hint_ccpa_iab">CCPA IAB String</string>
  <string name="hint_ccpa_mopub">CCPA Mopub String</string>
  <string name="ccpa_binary_value">CCPA Binary Value</string>

  <string name="hint_tcf_consent_string">Consent String</string>
  <string name="hint_tcf_vendor_consents">Vendor Consents String</string>
  <string name="hint_tcf_gdpr_applies">GDPR applies</string>
  <string name="btn_save">Save</string>
  <string name="btn_advanced_native">Advanced Native</string>
  <string name="btn_content">Content</string>
  <string name="btn_standalone_recycler_view">Standalone + Recycler View</string>
  <string name="integration_no_mock">No mock\nNothing is mocked, but mediation adapters are both present and have a higher precedence, so SDK is using the fallback profile ID.</string>
  <string name="integration_no_mediation">Ignore mediation adapters\nIntegration are detected normally without considering mediation adapters.</string>
  <string name="integration_mocked_detection">Mock detection\nIntegrations are forced by the Activities that represent them.</string>
  <string name="integration_bid_caching_warning">Note that because of bid caching, you may need to ask twice for a bid to have the correct profile ID.</string>
  <string name="integration_verbose">Display a toast on forced/detected integration</string>
  <string name="btn_integration_selector">Integration Selector</string>
</resources>
