<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  tools:context=".MainActivity">

  <ScrollView
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:paddingStart="25dp"
      android:paddingEnd="25dp"
      android:paddingBottom="20dp"
      android:orientation="vertical">
      <Button
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_marginTop="20dp"
        android:id="@+id/buttonDfpCall"
        android:layout_width="match_parent"
        android:background="#81C784"
        android:text="@string/btn_google_dfp_with_version"
        android:layout_height="wrap_content"/>
      <Button
        android:id="@+id/buttonStandalone"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="#81C784"
        android:text="@string/btn_standalone"/>
      <Button
        android:id="@+id/buttonStandaloneRecyclerView"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="#81C784"
        android:text="@string/btn_standalone_recycler_view"/>
      <Button
        android:id="@+id/buttoninHouse"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="#81C784"
        android:text="@string/btn_in_house_mediation"/>
      <Button
        android:id="@+id/buttonMopubCall"
        android:layout_marginTop="20dp"
        style="@style/Widget.AppCompat.Button.Colored"
        android:background="#81D4FA"
        android:text="@string/btn_mopub"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

      <Button
        android:id="@+id/buttonMopubMediation"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="#81D4FA"
        android:text="@string/btn_mopub_mediation"/>

      <Button
        android:id="@+id/buttonAdMobMediation"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="#81D4FA"
        android:text="@string/btn_admob_mediation"/>

      <Button
        android:id="@+id/buttonAdvancedBidding"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="#81D4FA"
        android:text="@string/btn_server_bidding"/>

      <Button
        android:id="@+id/buttonConsentSelector"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="#81D4FA"
        android:text="@string/btn_ccpa_consent_selector"/>

      <Button
        android:id="@+id/buttonTcfSelector"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="#81D4FA"
        android:text="@string/btn_tcf_consent_selector"/>

      <Button
        android:id="@+id/buttonIntegrationSelector"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="#81D4FA"
        android:text="@string/btn_integration_selector"/>

    </LinearLayout>

  </ScrollView>

</RelativeLayout>