<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:orientation="vertical">

  <EditText
    android:id="@+id/editCcpaIabString"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="8dp"
    android:layout_margin="16dp"
    android:hint="@string/hint_ccpa_iab"
    android:inputType="text"
    android:importantForAutofill="no"/>

  <CheckBox
    android:id="@+id/checkboxCcpaBinary"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="16dp"
    android:text="@string/ccpa_binary_value"/>

  <Button
    android:id="@+id/btnSavePrivacyConsentValues"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="16dp"
    android:text="@string/btn_save"
    />

</LinearLayout>
