<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:orientation="vertical">

  <ImageView
    android:id="@+id/iconCriteo"
    android:src="@drawable/ic_criteo_rgb"
    android:layout_marginTop="50dp"
    android:contentDescription="@string/criteo_logo_content_description"
    android:foregroundGravity="center"
    android:layout_width="150dp"
    android:adjustViewBounds="true"
    android:layout_height="wrap_content"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"/>

  <TextView
    android:textStyle="bold"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="12dp"
    android:layout_gravity="center_horizontal"
    android:gravity="center_horizontal"
    android:text="@string/demo_app_title"
    android:textColor="#B00020"
    android:textSize="30sp"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toBottomOf="@id/iconCriteo" />
  <TextView
    android:id="@+id/labelSdkVersion"
    android:textStyle="bold"
    android:textSize="18sp"
    android:text="@string/sdk_version_label"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    android:layout_marginBottom="8dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>