<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:layout_width="match_parent"
  android:layout_height="match_parent">

  <LinearLayout
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:orientation="vertical"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">
    <HorizontalScrollView
      android:layout_width="match_parent"
      android:layout_height="wrap_content">
      <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
          android:id="@+id/buttonStandAloneInterstitial"
          style="@style/Widget.AppCompat.Button.Colored"
          android:layout_width="0dp"
          android:layout_height="match_parent"
          android:layout_weight="1"
          android:background="@android:color/holo_blue_dark"
          android:enabled="false"
          android:text="@string/btn_interstitial"/>
        <Button
          android:id="@+id/buttonStandAloneBanner"
          style="@style/Widget.AppCompat.Button.Colored"
          android:layout_width="0dp"
          android:layout_height="match_parent"
          android:layout_weight="1"
          android:layout_marginStart="5dp"
          android:layout_marginLeft="5dp"
          android:background="@android:color/holo_blue_dark"
          android:text="@string/btn_banner"/>
        <Button
          android:id="@+id/buttonStandAloneInterstitialIbv"
          style="@style/Widget.AppCompat.Button.Colored"
          android:layout_width="0dp"
          android:layout_height="match_parent"
          android:layout_weight="1"
          android:layout_marginStart="5dp"
          android:layout_marginLeft="5dp"
          android:background="@android:color/holo_blue_dark"
          android:enabled="false"
          android:text="@string/btn_interstitial_ibv"/>
        <Button
          android:id="@+id/buttonStandAloneNative"
          style="@style/Widget.AppCompat.Button.Colored"
          android:layout_width="0dp"
          android:layout_height="match_parent"
          android:layout_weight="1"
          android:layout_marginStart="5dp"
          android:layout_marginLeft="5dp"
          android:background="@android:color/holo_blue_dark"
          android:text="@string/btn_advanced_native"/>
      </LinearLayout>
    </HorizontalScrollView>
    <LinearLayout
      android:id="@+id/AdLayout"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:layout_marginTop="10dp"
      android:orientation="vertical">
    </LinearLayout>
  </LinearLayout>
</android.support.constraint.ConstraintLayout>