<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  xmlns:ndroid="http://schemas.android.com/tools"
  xmlns:app="http://schemas.android.com/apk/res-auto">

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    ndroid:layout_margin="10dp"
    android:layout_marginTop="6dp"
    android:layout_marginBottom="8dp"
    android:layout_marginStart="10dp"
    android:layout_marginEnd="10dp"
    android:orientation="vertical">
    <HorizontalScrollView
      android:layout_width="match_parent"
      android:layout_height="wrap_content">
      <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
          android:id="@+id/buttonInhouseInterstitial"
          style="@style/Widget.AppCompat.Button.Colored"
          android:layout_width="0dp"
          android:layout_height="match_parent"
          android:layout_weight="1"
          android:background="@android:color/holo_orange_dark"
          android:text="@string/btn_interstitial"/>
        <Button
          android:id="@+id/buttonInhouseBanner"
          style="@style/Widget.AppCompat.Button.Colored"
          android:layout_width="0dp"
          android:layout_height="match_parent"
          android:layout_weight="1"
          android:layout_marginStart="5dp"
          android:layout_marginLeft="5dp"
          android:background="@android:color/holo_orange_dark"
          android:text="@string/btn_banner"/>
        <Button
          android:id="@+id/buttonInhouseInterstitialIbv"
          style="@style/Widget.AppCompat.Button.Colored"
          android:layout_width="0dp"
          android:layout_height="match_parent"
          android:layout_weight="1"
          android:layout_marginStart="5dp"
          android:layout_marginLeft="5dp"
          android:background="@android:color/holo_orange_dark"
          android:text="@string/btn_interstitial_ibv"/>
        <Button
          android:id="@+id/buttonInhouseNative"
          style="@style/Widget.AppCompat.Button.Colored"
          android:layout_width="0dp"
          android:layout_height="match_parent"
          android:layout_weight="1"
          android:layout_marginStart="5dp"
          android:layout_marginLeft="5dp"
          android:background="@android:color/holo_orange_dark"
          android:text="@string/btn_advanced_native"/>
      </LinearLayout>
    </HorizontalScrollView>
    <androidx.constraintlayout.widget.ConstraintLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      >
      <com.criteo.publisher.CriteoBannerView
        android:id="@+id/criteoBannerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:criteoAdUnitHeight="50"
        app:criteoAdUnitWidth="320"
        app:criteoAdUnitId="/140800857/Endeavour_320x50"
        app:layout_constraintStart_toStartOf="parent"
        />
      <FrameLayout
        android:id="@+id/nativeAdContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/criteoBannerView"
        android:layout_marginTop="64dp"
        />
    </androidx.constraintlayout.widget.ConstraintLayout>
  </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>